src/test/resources/tokens/invalid/char_multiple_chars.unpick
unpick v3
group int
    'aa'